Fix navigation alignment

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,5 +1,3 @@
 .main-content {
-  padding-top: 70px;
-  padding-bottom: 70px;
   height: 500px !important;
 }
