--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,50 +1,24 @@
+.header-cont {
+  background-color: #282c34; }
+
+.nav-cont {
+  height: 46px;
+  display: table; }
+
 .nav-logo {
   animation: nav-logo-spin infinite 20s linear;
-  width: 40px !important;
-  height: 40px !important; }
+  width: 40px;
+  height: 40px; }
+
+.navbar-brandz {
+  color: white;
+  font-size: 32px;
+  text-decoration: none;
+  display: table-cell;
+  vertical-align: middle; }
 
 @keyframes nav-logo-spin {
   from {
     transform: rotate(0deg); }
   to {
     transform: rotate(360deg); } }
-
-.header-cont {
-  box-sizing: border-box;
-  color: black;
-  display: block;
-  font-size: 17px;
-  font-weight: 400;
-  height: 0;
-  line-height: 24px;
-  text-align: center;
-  z-index: 1; }
-
-.nav-cont {
-  background-color: #282c34;
-  color: black;
-  display: table-cell;
-  flex-direction: column;
-  font-size: 16px;
-  font-weight: 400;
-  height: 46px;
-  left: 0;
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 0;
-  padding-bottom: 0;
-  position: fixed;
-  right: 0;
-  text-align: center; }
-
-.navbar-brandz {
-  box-sizing: border-box;
-  color: white;
-  cursor: pointer;
-  font-size: 32px;
-  line-height: 24px;
-  margin-right: 16px;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  text-align: center;
-  text-decoration: none !important; }
